sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Issuance__c/Inventory_Requisition_Issuance__c.object-meta.xml
<CustomObject>
    <label>Inventory Requisition Issuance</label>
    <nameField>
        <displayFormat>IRIS-{0000000}</displayFormat>
        <label>Inventory Requisition Issuance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Requisition Issuances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>