sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Issuance__c/fields/Inventory_Item_UOM__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item_UOM__c</fullName>
    <formula>&quot;test&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Item UOM</label>
    <type>Text</type>
</CustomField>