sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Issuance__c/fields/Inventory_Requisition_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Requisition_Item__c</fullName>
    <label>Inventory Requisition Item</label>
    <referenceTo>Inventory_Requisition_Item__c</referenceTo>
    <relationshipLabel>Inventory Requisition Issuances</relationshipLabel>
    <relationshipName>Inventory_Requisition_Issuances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>