sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Issuance__c/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issued By</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Inventory Requisition Issuances</relationshipLabel>
    <relationshipName>Inventory_Requisition_Issuances</relationshipName>
    <type>Lookup</type>
</CustomField>