sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Issuance__c/fields/Received_By__c.field-meta.xml
<CustomField>
    <fullName>Received_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collected By</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Inventory Requisition Issuances (Received By)</relationshipLabel>
    <relationshipName>Inventory_Requisition_Issuances1</relationshipName>
    <type>Lookup</type>
</CustomField>