sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Issuance__c/fields/xxxx__c.field-meta.xml
<CustomField>
    <fullName>xxxx__c</fullName>
    <label>xxxx</label>
    <length>20</length>
    <type>Text</type>
</CustomField>